// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EVENT REDUCER Should return EVENT_CREATE_SUCCESS 1`] = `
Object {
  "createSuccess": true,
  "deleteSuccess": false,
  "events": Array [],
  "isLoading": false,
  "totalPages": null,
  "updateSuccess": false,
}
`;

exports[`EVENT REDUCER Should return EVENT_LOADING 1`] = `
Object {
  "createSuccess": false,
  "deleteSuccess": false,
  "events": Array [],
  "isLoading": true,
  "totalPages": null,
  "updateSuccess": false,
}
`;

exports[`EVENT REDUCER Should return default state 1`] = `
Object {
  "createSuccess": false,
  "deleteSuccess": false,
  "events": Array [],
  "isLoading": false,
  "totalPages": null,
  "updateSuccess": false,
}
`;
